@@ -2,43 +2,44 @@
 # Homework 6 - Course Review Application
 
 ## Authors
-1) Name, netid, [GitHub profile name]
-2) Name, netid, [GitHub profile name]
-3) Name, netid, [GitHub profile name]
-4) Name, netid, [GitHub profile name]
+1) Ryan Goudjil, kqs9vd, goudji
+2) Gayathri Kavitha, wun4ex, gayathrikavitha
+3) Raja Madupu, vzs3xe, saiarka
+4) Jonathan Varghese, sym7cx, johnny-tech5
 
 ## To Run
 
-[Add a brief description of which .java file to run, and what vm arguments are needed]
+Run the CourseReviewsApplication.java file, and an example of the vm arguments is --module-path /Users/venk/IdeaProjects/javafx-sdk-17.0.9/lib --add-modules javafx.controls,javafx.fxml. The team used javafx-sdk-17.0.9 version of java. 
 
 ## Contributions
 
 List the primary contributions of each author. It is recommended to update this with your contributions after each coding session.:
 
-### [Author 1 - replace this with their name]
+### Ryan Goudjil
 
-* Author 1 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Primarily contributed to the course review page. This was the page that lets users add reviews and view reviews. 
+* Worked on DatabaseDriver as well and respective controllers for course review page.
+* Added the clicking functionality to the my review page, so users can look at their own reviews, and click on them to go to the course review page.
 
-### [Author 2 - replace this with their name]
+### Gayathri Kavitha
 
-* Author 2 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Primarily contributed creating the my review page, and making the format of it.
+* Worked on linking pages together and worked on DatabaseDriver.
+* Added limitations and error messages for the course review page, and worked on formatting other pages and implementing scroll features. 
 
-### [Author 3 - replace this with their name]
+### Raja Madupu
 
-* Author 3 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
+* Primarily contributed to making the course search page, and setting up specifications of inputs.
+* Worked on overall formatting of several pages, and the DatabaseDriver.
+* Added to respective controllers for the course search page, where users can add courses and made buttons for all courses that link to the course review page.
 
-### [Author 4 - replace this with their name]
+### Jonathan Varghese
 
-* Author 4 contributions
-* as a bulleted list
-* each line starts with an asterisk and a space
-
+* Primarily contributed to making the login/sign in page, and working on respective controllers.
+* Workd on initial set up of the application.
+* Worked on original formatting of the application and outline of the pages.
+* Helped with serveral debugging errors and flaws in program, to improve it.
+  
 ## Issues
 
-List any known issues (bugs, incorrect behavior, etc.) at the time of submission.
+N/A
